# pg_rusted_wire

./: .gitignore  Cargo.toml  README.md  py_iceberg.py  py_iceberg_tests.py  pyiceberg.py
docs/: segments.md
examples/: lrepl.rs  main.rs  psql.rs  simpsql.rs
src/: auth.rs  lib.rs  main.rs  pyiceberg.py  segment.rs  wire.rs
