[package]
name = "pg_rusted_wire"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.21"
bytes = "1.0.0"
hmac = "0.12.1"
pbkdf2 = { version = "0.12", features = ["simple"] }
rand = "0.9.2"
rand_core = { version = "0.6", features = ["std"] }
sha2 = "0.10.9"
stringprep = "0.1.5"
md-5 = "0.10.6"
hex = "0.4"

[lib]
name = "pg_rusted_wire"
path = "src/lib.rs"

[[bin]]
name = "pg_rusted_wire_exec"
path = "src/main.rs"
